bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Configure and register the llvm (clang) toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    cxx_standard = {"": "c++23"},
    llvm_version = "18.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
