bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "stb", version = "0.0.0-20251026-f1c79c0")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Configure and register the llvm (clang) toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    cxx_standard = {"": "c++23"},
    llvm_version = "18.1.8",
)
use_repo(llvm, "llvm_toolchain")
# register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "2dc498f24587eccc2752f8a892da004d9baa8318",
    remote = "https://github.com/ultimateanu/bazel-compile-commands-extractor",
)
